--- a/home/index.html
+++ b/home/index.html
@@ -3,14 +3,7 @@
 		<meta name="author" content="Flux User" >
 		<meta name="description" content="My Website" >
 		<meta name="keywords" content="Flux, Mac" >
-		<link href="main.css" rel="stylesheet" media="screen" type="text/css" >
-		<title>Home—</title>
-	</head>
-	<body style="left:1px; top:0; " >
-<div class="innerbody" >
-<object width="1280" height="720" >
-	<param name="movie" value="images/Template.swf" >
-	<param name="allowFullScreen" value="true" >
-	<param name="allowscriptaccess" value="always" >
-	<embed src="images/Template.swf" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="425" height="344" ></embed>
-</object></div><div class="cred" ><a href="http://www.michaelshillingburg.com" ><img src="images/cred.png" width="200" height="100" ></a></div></body></html>
+		<title>My Webpage</title>
+	<link href="main.css" rel="stylesheet" media="all" type="text/css" ></head>
+	<body>
+	<div class="contentholder" ><a href="1x.html" ><img src="images/images/1_01.png" ></a><a href="2x.html" ><img src="images/images/1_02.png" ></a><img src="images/images/1_03.png" ></div></body></html>
