--- a/home/index.html
+++ b/home/index.html
@@ -3,7 +3,7 @@
 		<meta name="author" content="Flux User" >
 		<meta name="description" content="My Website" >
 		<meta name="keywords" content="Flux, Mac" >
-		<title>My Webpage</title>
+		<title>Choose a Viewing Size</title>
 	<link href="main.css" rel="stylesheet" media="all" type="text/css" ></head>
 	<body>
 	<div class="contentholder" ><a href="1x.html" ><img src="images/images/1_01.png" ></a><a href="2x.html" ><img src="images/images/1_02.png" ></a><img src="images/images/1_03.png" ></div></body></html>
