--- a/interactive.html
+++ b/interactive.html
@@ -38,11 +38,11 @@
 			<hr />
 			<h2>Words With Cupid</h2>
 			<p>Concept UI/UX design for a fusion between a dating app and a word game.</p>
-			<div class="widecontentbox"><img src="images/interactive/2-01.png" /><img src="images/interactive/2-02.PNG" /><img src="images/interactive/2-04.PNG" /></div>
+			<div class="widecontentbox"><img src="images/interactive/2-01.png" /><img src="images/interactive/2-02.png" /><img src="images/interactive/2-04.png" /></div>
 			<hr />
 			<h2>Shadow &mdash; All Alert</h2>
 			<p>Concept UI/UX design for an alert system application based on user generated events.</p>
-			<div class="widecontentbox"><img src="images/interactive/3-01.png" /><img src="images/interactive/3-04.PNG" /><img src="images/interactive/3-02.PNG" /></div>
+			<div class="widecontentbox"><img src="images/interactive/3-01.png" /><img src="images/interactive/3-04.png" /><img src="images/interactive/3-02.png" /></div>
 			<hr />
 			<h2>JDPR &mdash; Jeff Dezen Public Relations</h2>
 			<p>Designed, developed, &amp; integrated a content management system and blog engine.<br/><br/><a href="http://www.jdpr.com">View Site ⇢</a></p>
