--- a/motion.html
+++ b/motion.html
@@ -34,8 +34,8 @@
 
 			<h2>Spinners</h2>
 			<p>A series of spinning GIFs made in Cinema4D.</p>
+			<img src="images/motion/cake.gif" width ="600"/>
 			<img src="images/motion/mill.gif" />
-			<img src="images/motion/cake.gif" />
 			<img src="images/motion/bike.gif" width="600" />
 			<img src="images/motion/record.gif" />
 			<img src="images/motion/arcade.gif" width="600"/>
