--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 			<a href="http://www.twitter.com/fancymichael">Twitter</a>&nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;&nbsp;
 			<a href="http://michaelshillingburg.tumblr.com/">Tumblr</a>&nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;&nbsp;
 			<a href="http://www.dribbble.com/fancymichael">Dribbble</a>
+			<br><br>
+			<a href="resume.pdf">View My Resumé</a>
 			</p>
 			<img src="images/pixelmike.png" />
 
