--- a/interactive.html
+++ b/interactive.html
@@ -33,8 +33,8 @@
 
 
 			<h2>Alpha Calc</h2>
-			<p>Created UI/UX for Alpha Calc, an intelligent scientific calculator for iOS. Alpha Calc can store expressions to be reused as custom buttons. Currently available for free on the <a href="https://itunes.apple.com/us/app/alpha-calc/id482039423?mt=8">App Store</a> and has been in the Top 10 charts two times.</p>
-			<div class="widecontentbox"><img src="images/interactive/02.png" /><img src="images/interactive/03.PNG" /><img src="images/interactive/04.PNG" /></div>
+			<p>Created UI/UX for Alpha Calc, an intelligent scientific calculator for iOS. Alpha Calc can store expressions to be reused as custom buttons. Currently available for free on the <a href="https://itunes.apple.com/us/app/alpha-calc/id482039423?mt=8">App Store.</a> <br>Alpha Calc has been in the Top 10 charts two times.</p>
+			<div class="widecontentbox"><img src="images/interactive/02.png" /><img src="images/interactive/03.PNG" /><img src="images/interactive/04.PNG" /><img src="images/interactive/topcharts.png" /></div>
 			<hr />
 			<h2>Words With Cupid</h2>
 			<p>Concept UI/UX design for a fusion between a dating app and a word game.</p>
@@ -48,9 +48,10 @@
 			<p>Designed, developed, &amp; integrated a content management system and blog engine.<br/><br/><a href="http://www.jdpr.com">View Site ⇢</a></p>
 			<div class="widecontentbox"><img src="images/interactive/5-01.jpg" /><img src="images/interactive/5-02.jpg" /></div>
 			<hr />
-			<h2>iOS 7 &mdash; Icon Redesign</h2>
+			<h2>iOS 7 &mdash; Icon Design</h2>
 			<p>Redesigned to improve consistency, color, and integration with user backgrounds.</p>
 			<img src="images/interactive/iconset.jpg" />
+			<img src="images/interactive/icons.png" />
 
 		</div>
 
