--- a/motion.html
+++ b/motion.html
@@ -34,6 +34,7 @@
 
 			<h2>Spinners</h2>
 			<p>A series of spinning GIFs made in Cinema4D.</p>
+			<img src="images/motion/van.gif" width="600" />
 			<img src="images/motion/cake.gif" width ="600"/>
 			<img src="images/motion/mill.gif" />
 			<img src="images/motion/bike.gif" width="600" />
