--- a/zodiac/index.html
+++ b/zodiac/index.html
@@ -7,8 +7,8 @@
 		<link href="main.css" rel="stylesheet" media="screen" type="text/css">
 		<title>zodiac</title>
 	</head>
-	<body>
+	<body><div class="container">
 
 		<div class="circle"></div>
-	</body>
+	</div></body>
 </html>
