--- a/zodiac/index.html
+++ b/zodiac/index.html
@@ -5,6 +5,7 @@
 		<meta name="description" content="My Website">
 		<meta name="keywords" content="Flux, Mac">
 		<link href="main.css" rel="stylesheet" media="screen" type="text/css">
+		<meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width,height=device-height">
 		<title>zodiac</title>
 	</head>
 	<body><div class="container">
