--- a/zodiac/index.html
+++ b/zodiac/index.html
@@ -10,6 +10,6 @@
 	</head>
 	<body><div class="container">
 
-		<div class="circle borderfade bob"></div>
+		<div class="circle borderfade bob aqua"></div>
 	</div></body>
 </html>
