--- a/zodiac/index.html
+++ b/zodiac/index.html
@@ -11,5 +11,12 @@
 	<body><div class="container">
 
 		<div class="circle borderfade bob aqua"></div>
+		<div class="circle bob pisces"></div>
+		<div class="circle bob aries"></div>
+		<div class="circle bob taurus"></div>
+		<div class="circle bob gemini"></div>
+		<div class="circle bob cancer"></div>
+		<div class="circle bob leo"></div>
+		<div class="circle bob virgo"></div>
 	</div></body>
 </html>
