--- a/zodiac/index.html
+++ b/zodiac/index.html
@@ -18,5 +18,9 @@
 		<div class="circle bob cancer"></div>
 		<div class="circle bob leo"></div>
 		<div class="circle bob virgo"></div>
+		<div class="circle bob libra"></div>
+		<div class="circle bob scorpio"></div>
+		<div class="circle bob sag"></div>
+		<div class="circle bob capricorn"></div>
 	</div></body>
 </html>
