--- a/zodiac/index.html
+++ b/zodiac/index.html
@@ -22,5 +22,6 @@
 		<div class="circle bob scorpio"></div>
 		<div class="circle bob sag"></div>
 		<div class="circle bob capricorn"></div>
+		<div class="centerbox bob"></div>
 	</div></body>
 </html>
