--- a/zodiac/index.html
+++ b/zodiac/index.html
@@ -7,6 +7,15 @@
 		<link href="main.css" rel="stylesheet" media="screen" type="text/css">
 		<meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width,height=device-height">
 		<title>zodiac</title>
+
+<script type="text/javascript">
+   function blockMove() {
+      event.preventDefault() ;
+}
+</script>
+
+<body ontouchmove="blockMove()">
+		
 	</head>
 	<body><div class="container">
 
