--- a/zodiac/pisces.html
+++ b/zodiac/pisces.html
@@ -14,24 +14,9 @@
       event.preventDefault() ;
 }
 </script>
-
-<body ontouchmove="blockMove()">
-
+		
 	</head>
-	<body><div class="container">
+	<body ontouchmove="blockMove()"><div class="piscescont">
 
-		<div class="circle borderfade bob aqua"></div>
-		<div class="circle bob pisces" onclick="location.href='pisces.html'"></div>
-		<div class="circle bob aries"></div>
-		<div class="circle bob taurus"></div>
-		<div class="circle bob gemini"></div>
-		<div class="circle bob cancer"></div>
-		<div class="circle bob leo"></div>
-		<div class="circle bob virgo"></div>
-		<div class="circle bob libra"></div>
-		<div class="circle bob scorpio"></div>
-		<div class="circle bob sag"></div>
-		<div class="circle bob capricorn"></div>
-		<div class="centerbox bob"></div>
 	</div></body>
 </html>
