--- a/zodiac/index.html
+++ b/zodiac/index.html
@@ -7,6 +7,7 @@
 		<link href="main.css" rel="stylesheet" media="screen" type="text/css">
 		<meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width,height=device-height">
 		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 		<title>zodiac</title>
 
 <script type="text/javascript">
