--- a/zodiac/home.html
+++ b/zodiac/home.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width,height=device-height">
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-		<title>The Relative Book of Astrology</title>
+		<title>zodiac</title>
 
 <script type="text/javascript">
    function blockMove() {
@@ -19,9 +19,20 @@
 <body ontouchmove="blockMove()">
 
 	</head>
-	<body><div class="greybg"><div class="innerlines"><div class="begin bobopap" onclick="location.href='home.html'"></div>
+	<body><div class="container">
 
-
-	</div>
+		<div class="circle borderfade bob aqua"></div>
+		<div class="circle bob pisces" onclick="location.href='pisces.html'"></div>
+		<div class="circle bob aries"></div>
+		<div class="circle bob taurus"></div>
+		<div class="circle bob gemini"></div>
+		<div class="circle bob cancer"></div>
+		<div class="circle bob leo"></div>
+		<div class="circle bob virgo"></div>
+		<div class="circle bob libra"></div>
+		<div class="circle bob scorpio"></div>
+		<div class="circle bob sag"></div>
+		<div class="circle bob capricorn"></div>
+		<div class="centerbox bob"></div>
 	</div></body>
 </html>
