--- a/zodiac/pisces.html
+++ b/zodiac/pisces.html
@@ -16,7 +16,7 @@
 </script>
 		
 	</head>
-	<body ontouchmove="blockMove()"><div class="piscescont fadein" id="background">
+	<body ontouchmove="blockMove()"><div id="background">
 
 	</div></body>
 
