--- a/zodiac/pisces.html
+++ b/zodiac/pisces.html
@@ -20,9 +20,7 @@
 </script>
 		
 	</head>
-	<body ontouchmove="blockMove()"><div id="background">
-
-	</div></body>
+	<body ontouchmove="blockMove()"><img src="images/chel.jpg" width="1024" height="768" id="background"></body>
 
 <script>
 
