--- a/zodiac/pisces.html
+++ b/zodiac/pisces.html
@@ -20,7 +20,11 @@
 </script>
 		
 	</head>
-	<body ontouchmove="blockMove()"><img src="images/chel.jpg" width="1024" height="768" id="background"></body>
+	<body ontouchmove="blockMove()"><img src="images/chel.jpg" width="768" height="1024" id="background">
+
+
+
+	</body>
 
 <script>
 
