--- a/zodiac/pisces.html
+++ b/zodiac/pisces.html
@@ -20,7 +20,7 @@
 </script>
 		
 	</head>
-	<body ontouchmove="blockMove()"><div class="piscescont fadein" content="user-scalable=yes"></div>
+	<body ontouchmove="blockMove()"><div class="piscescont fadein"></div>
 
 
 	</body>
