--- a/zodiac/home.html
+++ b/zodiac/home.html
@@ -21,7 +21,7 @@
 	</head>
 	<body><div class="container">
 
-		<div class="circle borderfade bob aqua"></div>
+		<div class="fadein"><div class="circle borderfade bob aqua"></div>
 		<div class="circle bob pisces" onclick="location.href='pisces.html'"></div>
 		<div class="circle bob aries"></div>
 		<div class="circle bob taurus"></div>
@@ -34,5 +34,6 @@
 		<div class="circle bob sag"></div>
 		<div class="circle bob capricorn"></div>
 		<div class="centerbox bob"></div>
+		</div>
 	</div></body>
 </html>
