--- a/zodiac/home.html
+++ b/zodiac/home.html
@@ -18,8 +18,6 @@
 function transitionPage() {
 	document.getElementById('container').classList.add('fadeout');
 }
-
-
 function stateChange() {
 	 window.location="pisces.html";
 }
@@ -31,10 +29,15 @@ function stateChange() {
 <body ontouchmove="blockMove()">
 
 	</head>
-	<body><div class="container" id="container">
+	<body>
+
+
+
+
+		<div class="container" id="container">
 
 		<div class="fadein"><div class="circle borderfade bob aqua"></div>
-		<div class="circle bob pisces" onclick="transitionPage(); setTimeout('stateChange()',3000)"></div>
+		<div class="circle bob pisces" onclick="transitionPage(); setTimeout('stateChange()',2000)"></div>
 		<div class="circle bob aries"></div>
 		<div class="circle bob taurus"></div>
 		<div class="circle bob gemini"></div>
