--- a/zodiac/pisces.html
+++ b/zodiac/pisces.html
@@ -15,6 +15,7 @@
 }
 
 	function loadText() {
+		document.getElementById('textPisces').classList.add('textPisces');
 		document.getElementById('textPisces').classList.add('fadein');
 		document.getElementById('toucher').classList.remove('touchme');
 	}
