--- a/zodiac/home.html
+++ b/zodiac/home.html
@@ -25,6 +25,9 @@ function stateChange() {
 function stateChange2() {
 	 window.location="virgo.html";
 }
+function stateChange3() {
+	 window.location="capricorn.html";
+}
 
 
 
@@ -51,7 +54,7 @@ function stateChange2() {
 		<div class="circle bob libra"></div>
 		<div class="circle bob scorpio"></div>
 		<div class="circle bob sag"></div>
-		<div class="circle bob capricorn"></div>
+		<div class="circle bob capricorn" onclick="transitionPage(); setTimeout('stateChange3()',2000)"></div>
 		<div class="centerbox bob"></div>
 		</div>
 	</div></body>
