--- a/zodiac/home.html
+++ b/zodiac/home.html
@@ -29,6 +29,10 @@ function stateChange3() {
 	 window.location="capricorn.html";
 }
 
+function stateChange4() {
+	 window.location="sagittarius.html";
+}
+
 
 
 </script>
@@ -53,7 +57,7 @@ function stateChange3() {
 		<div class="circle bob virgo" onclick="transitionPage(); setTimeout('stateChange2()',2000)"></div>
 		<div class="circle bob libra"></div>
 		<div class="circle bob scorpio"></div>
-		<div class="circle bob sag"></div>
+		<div class="circle bob sag" onclick="transitionPage(); setTimeout('stateChange4()',2000)"></div>
 		<div class="circle bob capricorn" onclick="transitionPage(); setTimeout('stateChange3()',2000)"></div>
 		<div class="centerbox bob"></div>
 		</div>
