--- a/zodiac/home.html
+++ b/zodiac/home.html
@@ -33,6 +33,18 @@ function stateChange4() {
 	 window.location="sagittarius.html";
 }
 
+function stateChange5() {
+	 window.location="aquarius.html";
+}
+
+function stateChange6() {
+	 window.location="scorpio.html";
+}
+
+function stateChange7() {
+	 window.location="aries.html";
+}
+
 
 
 </script>
@@ -47,16 +59,16 @@ function stateChange4() {
 
 		<div class="container fadein" id="container">
 
-		<div class="fadein"><div class="circle borderfade bob aqua"></div>
+		<div class="fadein"><div class="circle borderfade bob aqua" onclick="transitionPage(); setTimeout('stateChange5()',2000)"></div>
 		<div class="circle bob pisces" onclick="transitionPage(); setTimeout('stateChange()',2000)"></div>
-		<div class="circle bob aries"></div>
+		<div class="circle bob aries" onclick="transitionPage(); setTimeout('stateChange7()',2000)"></div>
 		<div class="circle bob taurus"></div>
 		<div class="circle bob gemini"></div>
 		<div class="circle bob cancer"></div>
 		<div class="circle bob leo"></div>
 		<div class="circle bob virgo" onclick="transitionPage(); setTimeout('stateChange2()',2000)"></div>
 		<div class="circle bob libra"></div>
-		<div class="circle bob scorpio"></div>
+		<div class="circle bob scorpio" onclick="transitionPage(); setTimeout('stateChange6()',2000)"></div>
 		<div class="circle bob sag" onclick="transitionPage(); setTimeout('stateChange4()',2000)"></div>
 		<div class="circle bob capricorn" onclick="transitionPage(); setTimeout('stateChange3()',2000)"></div>
 		<div class="centerbox bob"></div>
