--- a/zodiac/home.html
+++ b/zodiac/home.html
@@ -45,6 +45,25 @@ function stateChange7() {
 	 window.location="aries.html";
 }
 
+function stateChange8() {
+	 window.location="gemini.html";
+}
+function stateChange9() {
+	 window.location="taurus.html";
+}
+
+function stateChange10() {
+	 window.location="cancer.html";
+}
+
+function stateChange11() {
+	 window.location="leo.html";
+}
+
+function stateChange12() {
+	 window.location="libra.html";
+}
+
 
 
 </script>
@@ -62,12 +81,12 @@ function stateChange7() {
 		<div class="fadein"><div class="circle borderfade bob aqua" onclick="transitionPage(); setTimeout('stateChange5()',2000)"></div>
 		<div class="circle bob pisces" onclick="transitionPage(); setTimeout('stateChange()',2000)"></div>
 		<div class="circle bob aries" onclick="transitionPage(); setTimeout('stateChange7()',2000)"></div>
-		<div class="circle bob taurus"></div>
-		<div class="circle bob gemini"></div>
-		<div class="circle bob cancer"></div>
-		<div class="circle bob leo"></div>
+		<div class="circle bob taurus" onclick="transitionPage(); setTimeout('stateChange9()',2000)"></div>
+		<div class="circle bob gemini" onclick="transitionPage(); setTimeout('stateChange8()',2000)"></div>
+		<div class="circle bob cancer" onclick="transitionPage(); setTimeout('stateChange10()',2000)"></div>
+		<div class="circle bob leo" onclick="transitionPage(); setTimeout('stateChange11()',2000)"></div>
 		<div class="circle bob virgo" onclick="transitionPage(); setTimeout('stateChange2()',2000)"></div>
-		<div class="circle bob libra"></div>
+		<div class="circle bob libra" onclick="transitionPage(); setTimeout('stateChange12()',2000)"></div>
 		<div class="circle bob scorpio" onclick="transitionPage(); setTimeout('stateChange6()',2000)"></div>
 		<div class="circle bob sag" onclick="transitionPage(); setTimeout('stateChange4()',2000)"></div>
 		<div class="circle bob capricorn" onclick="transitionPage(); setTimeout('stateChange3()',2000)"></div>
