--- a/walters/index.html
+++ b/walters/index.html
@@ -2,11 +2,18 @@
 <html>
 <head>
 <style>
+
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 568px) 
+and (orientation : portrait) {
+
 	body {
 		background-color:#000;
 		background-size: 320px auto;
 		background-repeat: no-repeat;
 		margin: 0 auto;
+		max-width: 320px;
 		width: 320px;
 	}
 
@@ -15,6 +22,8 @@
 		height: 100%;
 		overflow: auto;
 	}
+
+}
 
 </style>
 </head>
