--- a/walters/index.html
+++ b/walters/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	
+<meta http-equiv="Content-type" name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no, width=device-width">
 <style>
-
-@media only screen 
-and (min-device-width : 320px) 
-and (max-device-width : 568px) 
-and (orientation : portrait) {
 
 	body {
 		background-color:#000;
@@ -22,8 +19,6 @@ and (orientation : portrait) {
 		height: 100%;
 		overflow: auto;
 	}
-
-}
 
 </style>
 </head>
