--- a/walters/index.html
+++ b/walters/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	
+
 <meta http-equiv="Content-type" name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no, width=device-width">
 <style>
 
@@ -9,7 +9,7 @@
 		background-color:#000;
 		background-size: 320px auto;
 		background-repeat: no-repeat;
-		margin: 0 auto;
+		margin: 0;
 		max-width: 320px;
 		width: 320px;
 	}
@@ -20,9 +20,22 @@
 		overflow: auto;
 	}
 
+	.numberinput {
+		width: 100%;
+		height: 88px;
+		background-image: url(images/fixedhead.png);
+		position: fixed;
+		top: 0px;
+		left: 0px;
+		z-index: 10;
+		background-repeat: no-repeat;
+		background-size: 320px auto;
+	}
+
 </style>
 </head>
 <body>
+	<div class="numberinput"></div>
 	<img src="images/testimage.png" width="320"/>
 </body>
 </html>
