cool fixed action

--- a/walters/index.html
+++ b/walters/index.html
@@ -6,7 +6,8 @@
 <style>
 
 	body {
-		background-color:#000;
+		background-image:url(images/collectionheader.jpg);
+		background-attachment: fixed;
 		background-size: 320px auto;
 		background-repeat: no-repeat;
 		margin: 0;
