--- a/walters/collections.html
+++ b/walters/collections.html
@@ -6,7 +6,7 @@
 <style>
 
 	body {
-		background-color: #000;
+		background-color: #292a2a;
 		background-repeat: no-repeat;
 		margin: 0;
 		max-width: 320px;
