--- a/walters/collections.html
+++ b/walters/collections.html
@@ -19,18 +19,6 @@
 		overflow: auto;
 	}
 
-	.numberinput {
-		width: 100%;
-		height: 88px;
-		background-image: url(images/fixedhead.png);
-		position: fixed;
-		top: 0px;
-		left: 0px;
-		z-index: 10;
-		background-repeat: no-repeat;
-		background-size: 320px auto;
-	}
-
 	.fixedhead {
 		width: 100%;
 		height: 509px;
@@ -44,10 +32,13 @@
 	}
 
 </style>
+<link rel="stylesheet" type="text/css" href="main.css">
+<script src="scripties.js"></script>
+
 </head>
 <body>
 	<div class="fixedhead"></div>
-	<div class="numberinput"></div>
+	<div class="numberinput" id="navbar" onclick="changeMenuBar()"></div>
 	<img src="images/testimage.png" width="320"/>
 </body>
 </html>
