--- a/walters/ellen.html
+++ b/walters/ellen.html
@@ -30,17 +30,6 @@
 		background-repeat: no-repeat;
 		background-size: 320px auto;
 	}
-	.numberinput2 {
-		width: 100%;
-		height: 223px;
-		background-image: url(images/menuswap.png);
-		position: fixed;
-		top: 0px;
-		left: 0px;
-		z-index: 10;
-		background-repeat: no-repeat;
-		background-size: 320px auto;
-	}
 
 	.fixedhead {
 		width: 100%;
@@ -56,6 +45,7 @@
 
 </style>
 <link rel="stylesheet" type="text/css" href="main.css">
+<script src="scripties.js"></script>
 
 
 
@@ -69,16 +59,3 @@
 </body>
 </html>
 
-
-<script>
-function changeMenuBar() {
-	if(document.getElementById('navbar').classList.contains("numberinput")) {
-    document.getElementById('navbar').classList.remove('numberinput');
-	document.getElementById('navbar').classList.add('numberinput2');
-} else if(document.getElementById('navbar').classList.contains("numberinput2")) {
-    document.getElementById('navbar').classList.remove('numberinput2');
-	document.getElementById('navbar').classList.add('numberinput');
-}
-}
-
-</script>
