--- a/space/index.html
+++ b/space/index.html
@@ -4,6 +4,7 @@
 
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name = "viewport" content = "width = 1024, user-scalable = no">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
 	<style>
 
