--- a/concafe/info.html
+++ b/concafe/info.html
@@ -60,11 +60,11 @@
 </head>
 <body>
 	
-	<div class="container"><img src="images/homebg.png" width="320" /></div>
-	<div class="titleglow2"></div>
+	<div class="container"><img src="images/info.png" width="320" /></div>
+	<div class="titleglow"></div>
 
-	<div class="bottomlink1" onclick="window.location = 'calendar.html'"></div>
-	<div class="bottomlink2" onclick="window.location = 'info.html'"></div>
+	<div class="leftlink" onclick="window.location = 'calendar.html'"></div>
+	<div class="rightlink" onclick="window.location = 'map.html'"></div>
 
 
 </body>
