--- a/concafe/map.html
+++ b/concafe/map.html
@@ -60,11 +60,13 @@
 </head>
 <body>
 	
-	<div class="container"><img src="images/homebg.png" width="320" /></div>
-	<div class="titleglow2"></div>
+	<div class="container"><img src="images/mapbottom.png" width="320" /><div class="titleglow"></div><div class="bottombox2"></div></div>
+	
 
-	<div class="bottomlink1" onclick="window.location = 'calendar.html'"></div>
-	<div class="bottomlink2" onclick="window.location = 'info.html'"></div>
+	<div class="leftlink" onclick="window.location = 'calendar.html'"></div>
+	<div class="rightlink" onclick="window.location = 'info.html'"></div>
+	<div class="midlink" onclick="window.location = 'index.html'"></div>
+	<div class="bottomlink2" onclick="window.location = 'https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=12&cad=rja&uact=8&ved=0CIgBEPUXMAs&url=%2Fmaps%2Fdir%2F%27%27%2Fwashing%2Bstate%2Bconvention%2Bcenter%2Fdata%3D!4m5!4m4!1m0!1m2!1m1!1s0x54906ab5090f3cc7%3A0x38d32c762126bc69&ei=xowzVLC8GszCsASDwYKYDw&usg=AFQjCNGSeYQr7O1nUzRL1wq9D2YoucBSkg'"></div>
 
 
 </body>
