--- a/concafe/calendar.html
+++ b/concafe/calendar.html
@@ -60,11 +60,12 @@
 </head>
 <body>
 	
-	<div class="container"><img src="images/homebg.png" width="320" /></div>
-	<div class="titleglow2"></div>
+	<div class="container"><img src="images/eventslist.png" width="320" /><div class="titleglow"></div><div class="bottombox"></div></div>
+	
 
-	<div class="bottomlink1" onclick="window.location = 'calendar.html'"></div>
-	<div class="bottomlink2" onclick="window.location = 'info.html'"></div>
+	<div class="leftlink" onclick="window.location = 'map.html'"></div>
+	<div class="rightlink" onclick="window.location = 'info.html'"></div>
+	<div class="midlink" onclick="window.location = 'index.html'"></div>
 
 
 </body>
