--- a/concafe/info.html
+++ b/concafe/info.html
@@ -67,6 +67,7 @@
 
 	<div class="leftlink" onclick="window.location = 'calendar.html'"></div>
 	<div class="rightlink" onclick="window.location = 'map.html'"></div>
+	<div class="midlink" onclick="window.location = 'index.html'"></div>
 
 
 </body>
