--- a/clients/refs/site/index.html
+++ b/clients/refs/site/index.html
@@ -17,7 +17,8 @@
         $('#stars4').css('background-position', 0.5 * x + 'px 0');
         $('#stars1').css('background-position', 1 * x + 'px 0');
         $('#stars2').css('background-position', 1.6 * x + 'px 0');
-        $('#stars3').css('background-position', 2.1 * x + 'px 0');
+        $('#stars3').css('background-position', 2.5 * x + 'px 0');
+        $('#stars5').css('background-position', 0.25 * x + 'px 0');
  
     }, 1);
  
@@ -29,11 +30,16 @@
 		<title>REFS</title>
 	</head>
 	<body>
+
 		<div class="bg">
+		<div id = "stars5"></div>
 		<div id = "stars4"></div>
 		<div id="stars1"></div>
 		<div id ="stars2"></div>
-		<div id = "stars3"></div>	
+		<div id = "stars3"></div>
+		<div class="logobox"></div>	
+		<div class="edgeTL"></div>
+		<div class="edgeTR"></div>
 		
 		</div>
 				
