--- a/clients/refs/site/index.html
+++ b/clients/refs/site/index.html
@@ -7,8 +7,13 @@
 		<meta name="keywords" content="">
 		<link href="main.css" rel="stylesheet" media="screen" type="text/css">
 
-		<script type="text/javascript">
+		<script>
 		
+$(document).ready(function(){	
+	$('#page_effect').fadeIn(2000);
+});
+
+
 		window.onload = function() {
  
     		var x = 0;
@@ -19,10 +24,13 @@
         $('#stars2').css('background-position', 1.6 * x + 'px 0');
         $('#stars3').css('background-position', 2.5 * x + 'px 0');
         $('#stars5').css('background-position', 0.25 * x + 'px 0');
+       
+
  
     }, 1);
  
 }
+
 		</script>
 
 
@@ -31,7 +39,7 @@
 	</head>
 	<body>
 
-		<div class="bg">
+		<div class="bg" id="page_effect" style="display:none;">
 		<div id = "stars5"></div>
 		<div id = "stars4"></div>
 		<div id="stars1"></div>
