--- a/clients/refs/site/index.html
+++ b/clients/refs/site/index.html
@@ -6,6 +6,8 @@
 		<meta name="description" content="My Website">
 		<meta name="keywords" content="">
 		<link href="main.css" rel="stylesheet" media="screen" type="text/css">
+		<link href='http://fonts.googleapis.com/css?family=Arimo:400' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
 		<script>
 		
@@ -48,6 +50,7 @@ $(document).ready(function(){
 		<div class="logobox"></div>	
 		<div class="edgeTL"></div>
 		<div class="edgeTR"></div>
+		<div class="nav"><a href="http://www.twitter.com">twitter</a> &#215; <a href="http://www.soundcloud.com">soundcloud</a> &#215; <a href="http://www.facebook.com">facebook</a> &#215; <a href="http://www.mailchimp.com">mailing list</a></div>
 		
 		</div>
 				
