--- a/clients/refs/site/index.html
+++ b/clients/refs/site/index.html
@@ -3,7 +3,7 @@
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 		<meta name="author" content="REFS">
-		<meta name="description" content="My Website">
+		<meta name="description" content="REFS">
 		<meta name="keywords" content="">
 		<link href="main.css" rel="stylesheet" media="screen" type="text/css">
 		<link href='http://fonts.googleapis.com/css?family=Arimo:400' rel='stylesheet' type='text/css'>
