--- a/clients/refs/site/index.html
+++ b/clients/refs/site/index.html
@@ -10,7 +10,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
 		<script>
-		
+	/*	
 $(document).ready(function(){	
 	$('#page_effect').fadeIn(2000);
 });
@@ -45,7 +45,7 @@ $(document).ready(function(){
 	</head>
 	<body>
 
-		<div class="bg" id="page_effect" style="display:none;">
+		<div class="bg" id="page_effect" style="display:visible;">
 		<div id = "stars5"></div>
 		<div id = "stars4"></div>
 		<div id="stars1"></div>
