--- a/clients/refs/waves/index.html
+++ b/clients/refs/waves/index.html
@@ -6,11 +6,9 @@
 		<meta name="description" content="REFS">
 		<meta name="keywords" content="">
 		<link href="main.css" rel="stylesheet" media="screen" type="text/css">
-		<link href='http://fonts.googleapis.com/css?family=Arimo:400' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-
-		<script>
-		</script>
+		
+		<link href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'>
+		
 
 
 
@@ -18,6 +16,29 @@
 	</head>
 	<body>
 		<div class="logobox"></div>
+		<button class="navbutton" onclick="clickButton();"></button>
+		<div class="links" id="linkbox"><a href="http://www.twitter.com">Twitter</a> <a href="http://www.soundcloud.com">Soundcloud</a> <a href="http://www.google.com">Mailing List</a></div>
 
 	</body>
+
+<script>
+
+			var buttonPress = false;
+			var links = document.getElementById("linkbox");
+			links.style.display = "none";
+
+			function clickButton () {
+				if(buttonPress == false) {
+				links.style.display = "block";
+				links.className += " textIn";
+				buttonPress = true;
+			} else if(buttonPress == true) {
+				links.style.display = "none";
+				links.className = "links";
+				buttonPress = false;
+			}
+			}
+
+		</script>
+
 </html>
