--- a/clients/refs/wavesgrid/index.html
+++ b/clients/refs/wavesgrid/index.html
@@ -33,12 +33,12 @@
 
 <script>
 
+
 var buttonPress = false;
 var links = document.getElementById("linkbox");
 links.style.display = "none";
 
 function clickButton () {
-	canMouse = false;
 	if(buttonPress == false) {
 		links.style.display = "block";
 		links.className += " textIn";
@@ -50,8 +50,10 @@ function clickButton () {
 	}
 }
 
-var canMouse = true;
-if (canMouse == true) {
+
+
+</script>
+<script>
 	var x = 0;
 	x+=1;
     setInterval(function(){
@@ -66,13 +68,15 @@ if (canMouse == true) {
  */
     }, 1);
 
-$(document).mousemove(function(e){
+$(window).mousemove(function(e){
     var amountMovedX = (e.pageX * -1 / 3);
       $("#stars1").css('background-position', amountMovedX + ' ' + 0.5 * x + 'px');
       $("#stars2").css('background-position', amountMovedX/2 + ' ' + 0.5 * x + 'px');
       $("#stars3").css('background-position', amountMovedX/3 + ' ' + 0.5 * x + 'px');
 });
-}
+
+
+
 </script>
 
 </html>
