--- a/clients/refs/canvas/index.html
+++ b/clients/refs/canvas/index.html
@@ -12,7 +12,11 @@
 <body>
 	<canvas id="canvas"></canvas>
 	<div class="fader"></div>
-	<div class="logobox" id="logo"></div>
+	<div class="logobox"></div>
+	<div class="facebook"></div>
+	<div class="email"></div>
+	<div class="mailing"></div>
+	<div class="twitter"></div>
 	
 
 
@@ -21,10 +25,13 @@
 
 <script src="stars.js"></script>
 <script>
-
+/*
 var logo = document.getElementById('logo');
 logo.style.left = window.innerWidth / 2;
 
+var logowidth = logo.style.width;
+console.log(logowidth);
+*/
 
 </script>
 
