--- a/clients/refs/canvas/index.html
+++ b/clients/refs/canvas/index.html
@@ -13,10 +13,10 @@
 	<canvas id="canvas"></canvas>
 	<div class="fader"></div>
 	<div class="logobox"></div>
-	<div class="facebook"></div>
-	<div class="email"></div>
-	<div class="mailing"></div>
-	<div class="twitter"></div>
+	<div class="facebook" onclick="location.href='http://facebook.com/refsofficial'"></div>
+	<div class="email" onclick="location.href='mailto:refsofficial@gmail.com'"></div>
+	<div class="mailing" onclick="location.href=''"></div>
+	<div class="twitter" onclick="location.href='http://twitter.com/refsofficial'"></div>
 	
 
 
