lines and links

--- a/clients/refs/canvas/index.html
+++ b/clients/refs/canvas/index.html
@@ -16,7 +16,7 @@
 	<div class="facebook" onclick="location.href='http://facebook.com/refsofficial'"></div>
 	<div class="email" onclick="location.href='mailto:refsofficial@gmail.com'"></div>
 	<div class="mailing" onclick="location.href=''"></div>
-	<div class="twitter" onclick="location.href='http://twitter.com/refsofficial'"></div>
+	<div class="twitter2" onclick="location.href='http://twitter.com/refsofficial'"></div>
 	
 
 
