--- a/classes/thepound/index.html
+++ b/classes/thepound/index.html
@@ -15,6 +15,16 @@
 			<div class="homeCoverBarcode"></div>
 			<div class="homeCoverDownButton"></div>
 		</div>
+		<div class="homeContentsContainer">
+			<div class="homeContentsLogohead"></div>
+			<div class="dog1"></div>
+
+
+
+
+
+		</div>
+
 
 
 	</body>
